fixed bottom alignments and divs

--- a/TeleHealth_files/responsive.css
+++ b/TeleHealth_files/responsive.css
@@ -1106,7 +1106,7 @@
 
   html, body, form {
     width: 100%;
-    height: 100%;
+    height: 100% ;
     overflow-x: hidden;
   }
   footer {
@@ -1116,6 +1116,7 @@
     color: #333;
   }
   #form1 {
+    background-color: #f4f4f0;
     height: 100%;
   }
   /* Header margins live here*/
@@ -1127,7 +1128,7 @@
   .Header_headerNavbar {
     width: 100%;
     padding: 0px 10px 0px 10px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     
   }
   .Header_headerNav {
@@ -1137,7 +1138,7 @@
     color: #4F4F4F;
     font-size: 16px;
     text-align: right;
-    overflow: hidden;
+    /*overflow: hidden;*/
   } 
     .Banner_bannerContainer {
         width: 100%;
@@ -1168,7 +1169,8 @@
         
     }
     .Index_container {
-      height: 125%;
+      background-color: #f4f4f0;
+      height: 100% !important;
       width: inherit;
       padding-bottom: 0px;
     }   
@@ -1177,13 +1179,26 @@
         position: relative;
         background-color: #fff;
         width: 90%;
-        height: 456%;
+        height: 362%;
         margin: 10px 0px 0px 0px;
         padding: 0px 0px 0px 0px;
-    }       
-
+    }
+    .Index_messagesDesktop_pvd {
+        width: 100%;
+        height: 90%;
+        display: inline-block;
+        background: #fff;
+    }
+    .Filters_filtersInnerContainer {
+        width: 94%;
+        margin-right: 3%;
+        margin-left: 3%;
+        height: 70%;
+      
+    }
     .txtContainer{
       background-color: #fff;
+      height: 100%
     }
     .txtBoxStp2 {
         background-color: #fff;
@@ -1192,8 +1207,10 @@
         padding-top: 20px;
         padding-bottom: 5px;
         width: 100%;
+        height: 600px;
         display: flex;
         justify-content: center;
+        margin-bottom: 10px;
     }
   
   .txtBoxStp2+div{
@@ -1201,7 +1218,8 @@
   }
   
   .innerTxtStp2{
-    height:85%
+    height:85%;
+    overflow: hidden;
   }
   
     .WelcomeBIDMC {
